Server and monitor now module based
git-svn-id: svn://svn.hafro.is/jminor/branches/java11@15723 51816742-9f83-410d-85ed-e7bcf7042953