@@ -1,3 +1,5 @@
+import org.javamodularity.moduleplugin.tasks.ModularJavaExec
+
 apply plugin: 'application'
 
 dependencies {
@@ -23,7 +25,21 @@ dependencies {
     runtime project(':jminor-framework-plugins-logback-proxy')
 }
 
-mainClassName = '$moduleName/org.jminor.swing.framework.server.monitor.ui.EntityServerMonitorPanel'
+mainClassName = "$moduleName/org.jminor.swing.framework.server.monitor.ui.EntityServerMonitorPanel"
+
+task runServerMonitor(type: ModularJavaExec) {
+    group 'run'
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'org.jminor.swing.framework.server.monitor.ui.EntityServerMonitorPanel'
+    jvmArgs = ['--add-modules', 'org.jminor.framework.plugins.logback.proxy']
+    systemProperties = [
+            'jminor.server.hostname'          : 'localhost',
+            'jminor.server.admin.user'        : 'scott:tiger',
+            'javax.net.ssl.trustStore'        : '../../framework/server/src/main/security/jminor_truststore.jks',
+            'javax.net.ssl.trustStorePassword': 'crappypass',
+            'logback.configurationFile'       : 'src/config/logback.xml'
+    ]
+}
 
 applicationDistribution.from(files(
         '../../framework/server/src/main/security/jminor_truststore.jks',
@@ -34,21 +50,10 @@ applicationDistribution.from(files(
 }
 
 applicationDefaultJvmArgs = [
-        "-Djavax.net.ssl.trustStore=../config/jminor_truststore.jks",
-        "-Djavax.net.ssl.trustStorePassword=crappypass",
-        "-Djava.security.policy=../config/all_permissions.policy",
-        "-Djminor.configurationFile=../config/server_monitor.config"
+        '--add-modules', 'org.jminor.framework.plugins.logback.proxy',
+        '-Djavax.net.ssl.trustStore=../config/jminor_truststore.jks',
+        '-Djavax.net.ssl.trustStorePassword=crappypass',
+        '-Djava.security.policy=../config/all_permissions.policy',
+        '-Dlogback.configurationFile=../config/logback.xml',
+        '-Djminor.configurationFile=../config/server_monitor.config'
 ]
-
-task runServerMonitor(type: JavaExec) {
-    group 'run'
-    classpath = sourceSets.main.runtimeClasspath
-    main = 'org.jminor.swing.framework.server.monitor.ui.EntityServerMonitorPanel'
-    systemProperties = [
-            'jminor.server.hostname'          : 'localhost',
-            'jminor.server.admin.user'        : 'scott:tiger',
-            'javax.net.ssl.trustStore'        : '../../framework/server/src/main/security/jminor_truststore.jks',
-            'javax.net.ssl.trustStorePassword': 'crappypass',
-            'logback.configurationFile'       : 'src/config/logback.xml'
-    ]
-}
